--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "RAIZEL - MD",
-    "description": "RAIZELMD  - Makes it easy and fun to use Whatsapp.",
+    "name": "LO9MANE - MD",
+    "description": "LO9MANEBOT  - Makes it easy and fun to use Whatsapp.",
     "logo": "https://telegra.ph/file/39272916fd98efa5fec86.jpg",
     "keywords": ["whatsapp", "userbot", "bobiz", "bot", "ai" , "MD" ],
     "repository": "https://github.com/bobizbotmd/BOBIZ-MD",
