--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
            
            "URL_1NAME": {
             "description": "",
-            "value": "🎃شات المطور🎃" ,
+            "value": "🎃يوتوب🎃" ,
             "required": true
       },
            "URL_1LINK": {
