--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "RAIZEL - MD",
-    "description": "RAIZELMD  - Makes it easy and fun to use Whatsapp.",
+    "name": "lo9mane&bassam - MD",
+    "description": "lo9manebot  - Makes it easy and fun to use Whatsapp.",
     "logo": "https://telegra.ph/file/39272916fd98efa5fec86.jpg",
     "keywords": ["whatsapp", "userbot", "bobiz", "bot", "ai" , "MD" ],
     "repository": "https://github.com/bobizbotmd/BOBIZ-MD",
@@ -16,7 +16,7 @@
            
            "URL_1NAME": {
             "description": "",
-            "value": "🎃شات المطور🎃" ,
+            "value": "🎃قناتي يوتوب🎃" ,
             "required": true
       },
            "URL_1LINK": {
